# limes

./: .gitignore  CLAUDE.md  Cargo.toml  MACOS-BACKEND.md  Makefile  README.md  build.rs  config.toml.example  rustfmt.toml
.githooks/: pre-commit
image/: Dockerfile
src/: agents.rs  bootstrap.rs  config.rs  context.rs  docker.rs  docker_proxy.rs  doctor.rs  forward.rs  identity.rs  main.rs  mounts.rs  passthrough.rs  policy.rs  run.rs  sandbox.rs  seatbelt.rs  status.rs  util.rs
