[package]
name = "limes"
version = "0.1.0"
edition = "2024"
description = "A host-mirroring sandbox for running agents and dev commands under a dedicated rootless Docker daemon"

[[bin]]
name = "lim"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"

[profile.release]
strip = true
